fixed height issue on cb form
if there was too little height, submit button was invisible.

--- a/public/less/app.less
+++ b/public/less/app.less
@@ -673,3 +673,12 @@ footer {
 	
 
 }
+
+@media screen and (max-height: 745px) {
+	.cbFormRow .step-circles {
+		position: static;
+	}
+	.imported-col {
+		position: static;
+	}	
+}
